--- a/Project-1 (HTML+CSS)/style.css
+++ b/Project-1 (HTML+CSS)/style.css
@@ -293,3 +293,51 @@ body{
     color: #117964;
     font-weight: 700;
 }
+
+#contact{
+    padding: 5rem 0;
+    background: white;
+}
+
+.contact-container{
+    display: flex;
+    background: #fff;
+}
+
+.contact-image{
+    display: block;
+    height: 400px;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+}
+
+.form-container input{
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #ddd;
+    padding: 1rem 0;
+    outline: none;
+    margin-bottom: 1rem;
+    color: #444;
+    font-weight: 500;
+}
+
+.form-container textarea{
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #ddd;
+    padding: 1rem 0;
+}
+.form-container h2{
+    font-size: 3rem;
+    font-weight: 400;
+    color: #444;
+    margin-bottom: 1rem;
+}
+
+.form-container a{
+    font-size: 1.2rem;
+}
